Actualizacion de imagenes de bootstrap

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>15 Marzo 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ejruizm.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Pagina Web:</strong> <span>ejruizm.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+51 993093989</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, PERU</span></li>
                 </ul>
