--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/perfil-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Ingeniero Mecatrónico &amp; Estudiante Web Developer.</h2>
@@ -103,17 +103,17 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>15 Marzo 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Pagina Web:</strong> <span>ejruizm.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+51 993093989</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Pagina Web:</strong> <span><a href="https://ejruizm.github.io">ejruizm.github.io</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span><a href="tel: +51993093989">+51 993093989</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, PERU</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Grado:</strong> <span>Bachiller</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:eruizmundaca@gmail.com">eruizmundaca@gmail.com</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
                 </ul>
               </div>
             </div>
