Actualizar texto resumen

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Perfil</h2>
-        <p>Como joven profesional, me destaco por ser decidido, proactivo y empático. Con un enfoque analítico y habilidades para resolver problemas, me adapto rápidamente a los cambios y colaboro eficientemente en equipos de trabajo.</p>
+        <p>Desarrollador Junior con habilidades en el diseño, implementación y mantenimiento de aplicaciones web y tecnologias de vanguardia.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -118,7 +118,7 @@
               </div>
             </div>
             <p class="py-3">
-              Apasionado por la innovación, busco oportunidades para contribuir en proyectos impactantes en el campo de la ingeniería.
+              Destaco por mi habilidad para trabajar en equipo, resolver conflictos y adaptarme a nuevos desafíos, aportando valor tanto en el ámbito técnico como en el interpersonal.
             </p>
           </div>
         </div>
@@ -201,8 +201,10 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Resumen</h2>
+        <p>Como joven profesional, me destaco por ser decidido, proactivo y empático.</p>
+        <p>Con un enfoque analítico y habilidades para resolver problemas, me adapto rápidamente a los cambios y colaboro eficientemente en equipos de trabajo.</p>
+        <p>Apasionado por la innovación, busco oportunidades para contribuir en proyectos impactantes en el campo de la ingeniería.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
