--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>15 Marzo 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Pagina Web:</strong> <span><a href="https://ejruizm.github.io">ejruizm.github.io</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span><a href="tel: +51993093989">+51 993093989</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, PERU</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, Perú</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -215,55 +215,68 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Edgar Ruiz</h4>
+              <p><em>Ingeniero mecatrónico y estudiante de desarrollo web, con conocimientos en el diseño, desarrollo y mantenimiento de aplicaciones web.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Lima, Perú</li>
+                <li><a href="tel: +51993093989">+51 993093989</a></li>
+                <li><a href="mailto:eruizmundaca@gmail.com">eruizmundaca@gmail.com</a></li>
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Educacion</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Especialización en Desarrollo Back-End</h4>
+              <h5>2024</h5>
+              <p><em>Instituto superior tecnológico IDAT | Lima, Perú</em></p>
+              <p>Actualmente cursando una especialización en desarrollo Back-End, enfocándome en el diseño y optimización de soluciones del lado del servidor para aplicaciones web eficientes y escalables.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Ingeniero de Sistemas</h4>
+              <h5>2024 - Presente</h5>
+              <p><em>Universidad Peruana de Ciencias Aplicadas | Lima, Perú </em></p>
+              <p>Estoy en proceso de completar una segunda carrera en Ingeniería de Sistemas, complementando mi formación en Ingeniería Mecatrónica con conocimientos avanzados en desarrollo de software y tecnologías de la información.</p>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Ingeniero Mecatónico</h4>
+              <h5>2016 - 2021</h5>
+              <p><em>Universidad Peruana de Ciencias Aplicadas | Lima, Perú </em></p>
+              <p>Bachiller en Ingeniería Mecatrónica, con formación sólida en sistemas automatizados y experiencia en el área de mantenimiento .</p>
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Experiencia Laboral</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Ejecutivo Junior</h4>
+              <h5>2023 - 2024</h5>
+              <p><em>Viru | Trujillo, Perú</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Trabajé en proyectos de mantenimiento preventivo y correctivo para garantizar el funcionamiento óptimo de la maquinaria y equipos agrícolas en una planta de procesamiento de alimentos congelados.</li>
+                <li>He colaborado estrechamente con el equipo de mantenimiento senior, participando en inspecciones, reparaciones y mejoras.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Interprete</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>Mego Networks | Lima, Perú</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Proporcioné servicios de interpretación telefónica para personas en los Estados Unidos que tenían un dominio limitado del inglés en diversos campos como banca, servicios sociales, atención médica y situaciones de emergencia.</li>
+                <li>Realicé interpretaciones en tiempo real del inglés al español y viceversa, garantizando una comunicación clara y precisa entre las partes.</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Web Developer Junior</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>Ernst & Young | Lima, Perú </em></p>
+              <ul>
+                <li>Desarrollé mis habilidades en programación y adquirí experiencia tanto en Front-End como en Back-End.</li>
+                <li>Participé activamente en el desarrollo y optimización de BET, una aplicación web diseñada para mejorar la efectividad del directorio en un empresa, colaborando con el equipo en el diseño y la implementación de funcionalidades clave.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
