actualizacion de contacto

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>15 Marzo 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Pagina Web:</strong> <span><a href="https://ejruizm.github.io">ejruizm.github.io</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span><a href="tel: +51993093989">+51 993093989</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Teléfono:</strong> <span><a href="tel: +51993093989">+51 993093989</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, Perú</span></li>
                 </ul>
               </div>
@@ -349,8 +349,9 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Contacto</h2>
+        <p>Estoy disponible para colaborar en proyectos, responder preguntas o explorar oportunidades profesionales.</p>
+        <p>Si deseas ponerte en contacto conmigo, por favor utiliza la información a continuación:</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade" data-aos-delay="100">
@@ -361,60 +362,28 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
-                <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h3>Dirección</h3>
+                <p>Lima, Perú</p>
               </div>
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <h3>Teléfono</h3>
+                <p><a href="tel: +51993093989">+51 993093989</a></p>
               </div>
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <h3>Email</h3>
+                <p><a href="mailto:eruizmundaca@gmail.com">eruizmundaca@gmail.com</a></p>
               </div>
             </div><!-- End Info Item -->
 
           </div>
-
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
 
         </div>
 
