actualizacion de fotter

--- a/index.html
+++ b/index.html
@@ -395,18 +395,17 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Edgar Ruiz Mundaca</h3>
+      <p>"El futuro pertenece a quienes creen en la belleza de sus sueños." - Eleanor Roosevelt.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/edgar.ruizmundaca"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/edgarjh1/"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/EJRuizM"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/edgar-jahir-ruiz-mundaca-91602b1a0/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Edgar Ruiz</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
