--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Interprete</h4>
+              <h4>Intérprete</h4>
               <h5>2022 - 2023</h5>
               <p><em>Mego Networks | Lima, Perú</em></p>
               <ul>
@@ -312,7 +312,7 @@
                 <h4>BET</h4>
                 <p>Herramienta desarrollada en Ernst & Young</p>
                 <a href="assets/img/masonry-portfolio/bet.PNG" title="BET" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details1.html" title="Mas detalles" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -322,7 +322,7 @@
                 <h4>Artículo</h4>
                 <p>Artículo publicado en 7th Brazilian Technology Symposium, BTSym 2021</p>
                 <a href="assets/img/masonry-portfolio/scopus.PNG" title="Artículo" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details2.html" title="Mas detalles" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -332,7 +332,7 @@
                 <h4>Página Web</h4>
                 <p>Página web personal usando herramentas de github</p>
                 <a href="assets/img/masonry-portfolio/my-page.PNG" title="Página Web" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details3.html" title="Mas detalles" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
