actualizacion de portfolio-details2

--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -97,7 +97,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/bet.PNG" alt="">
+              <img src="assets/img/masonry-portfolio/scopus.PNG" alt="">
             </div>
 
           </div>
@@ -110,22 +110,13 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>EY Board Effectiveness Tool (BET)</h2>
+              <h2>A Computational Comparative Analysis Between Nvidia Jetson Nano and Raspberry Pi CM4 for the Classification of White Asparagus with SVM</h2>
               <p>
-                BET es el sistema de mejora de la efectividad del Directorio desarrollado por EY, basado en un aplicativo web de uso amigable. Esta aplicación está parametrizada para mostrar las posibles acciones de mejora que resultan de las calificaciones y comentarios recogidos de los miembros del Directorio.
+                El estudio propone analizar la respuesta computacional que brinda las Single Board Computers Rapsberry Pi CM4 y Nvidia Jetson Nano, ya que son elementos cruciales cuando se trabaja con aplicaciones de aprendizaje automático. 
               </p>
               <p>
-                El proceso de mejora del desempeño del Board, sigue 6 etapas clave. En la primera se hace uso del Board Effectiveness Tool (BET), sistema de autoevaluación del Directorio, de propiedad de EY Perú, según el tipo de evaluación correspondiente.
+                Para el desarrollo de la investigación se implementó un algoritmo con máquinas de soporte vectorial para poder comparar el rendimiento en tiempo real de ambas computadoras basado en métricas de rendimiento como tiempo de reacción, el número máximo de procesos concurrentes y utilización de recursos por proceso y eficiencia.
               </p>
-
-              <p>
-                De ahí se sigue a un análisis e informe de los resultados obtenidos, para luego priorizar los más importantes a través de un taller de alineamiento. Luego de ello, se lleva a cabo una planificación y un plan de acción en base a los temas priorizados.
-              </p>
-
-              <p>
-                Finalmente, los cambios y mejoras se implementan con el acompañamiento de EY y se hace un monitoreo de sus resultados. 
-              </p>
-
             </div>
           </div>
 
@@ -133,10 +124,11 @@
             <div class="portfolio-info">
               <h3>Información del proyecto</h3>
               <ul>
-                <li><strong>Categoría</strong> App Web</li>
-                <li><strong>Cliente</strong> Ernst & Young</li>
-                <li><strong>Fecha del Proyecto</strong> Mayo, 2022</li>
-                <li><strong>URL</strong> <a href="https://www.ey.com/es_pe/board-matters/evaluation">https://www.ey.com/es_pe/board-matters/evaluation</a></li>
+                <li><strong>Categoría</strong> Articulo Científico</li>
+                <li><strong>Autor</strong> Edgar Ruiz</li>
+                <li><strong>Fecha del Proyecto</strong> Julio, 2022</li>
+                <li><strong>URL</strong> <a href="https://link.springer.com/chapter/10.1007/978-3-031-08545-1_49"> https://link.springer.com/chapter/10.1007/978-3-031-08545-1_49</a></li>
+                <li><strong>DOI</strong> 10.1007/978-3-031-08545-1_49</li>
               </ul>
             </div>
           </div>
@@ -152,7 +144,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Edgar Ruiz Mundaca</h3>
-      <p>"La manera de empezar es dejar de hablar y comenzar a hacer." - Walt Disney.</p>
+      <p>"La excelencia no es un acto, sino un hábito." - Aristóteles.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.facebook.com/edgar.ruizmundaca"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/edgarjh1/"><i class="bi bi-instagram"></i></a>
