actualizacion de portfolio-details3

--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -97,7 +97,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/bet.PNG" alt="">
+              <img src="assets/img/masonry-portfolio/my-page.PNG" alt="">
             </div>
 
           </div>
@@ -110,20 +110,16 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>EY Board Effectiveness Tool (BET)</h2>
+              <h2>Desarrollo de Página Web Personal</h2>
               <p>
-                BET es el sistema de mejora de la efectividad del Directorio desarrollado por EY, basado en un aplicativo web de uso amigable. Esta aplicación está parametrizada para mostrar las posibles acciones de mejora que resultan de las calificaciones y comentarios recogidos de los miembros del Directorio.
+                Este proyecto consiste en el desarrollo de mi página web personal y currículum vitae (CV) utilizando una plantilla de Bootstrap y hospedada en GitHub Pages.
               </p>
               <p>
-                El proceso de mejora del desempeño del Board, sigue 6 etapas clave. En la primera se hace uso del Board Effectiveness Tool (BET), sistema de autoevaluación del Directorio, de propiedad de EY Perú, según el tipo de evaluación correspondiente.
-              </p>
-
-              <p>
-                De ahí se sigue a un análisis e informe de los resultados obtenidos, para luego priorizar los más importantes a través de un taller de alineamiento. Luego de ello, se lleva a cabo una planificación y un plan de acción en base a los temas priorizados.
+                La página está diseñada para presentar mis habilidades, experiencia, y proyectos destacados de manera profesional y accesible.
               </p>
 
               <p>
-                Finalmente, los cambios y mejoras se implementan con el acompañamiento de EY y se hace un monitoreo de sus resultados. 
+                Se utiliza tecnologias como HTML y CSS para la estructura y el diseño de la pagina.
               </p>
 
             </div>
@@ -134,9 +130,8 @@
               <h3>Información del proyecto</h3>
               <ul>
                 <li><strong>Categoría</strong> App Web</li>
-                <li><strong>Cliente</strong> Ernst & Young</li>
-                <li><strong>Fecha del Proyecto</strong> Mayo, 2022</li>
-                <li><strong>URL</strong> <a href="https://www.ey.com/es_pe/board-matters/evaluation">https://www.ey.com/es_pe/board-matters/evaluation</a></li>
+                <li><strong>Fecha del Proyecto</strong> Julio, 2024</li>
+                <li><strong>URL</strong> <a href="https://ejruizm.github.io/">https://ejruizm.github.io/</a></li>
               </ul>
             </div>
           </div>
@@ -152,7 +147,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Edgar Ruiz Mundaca</h3>
-      <p>"La manera de empezar es dejar de hablar y comenzar a hacer." - Walt Disney.</p>
+      <p>"El secreto de la felicidad no es hacer siempre lo que se quiere, sino querer siempre lo que se hace." - Mario Vargas Llosa.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.facebook.com/edgar.ruizmundaca"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/edgarjh1/"><i class="bi bi-instagram"></i></a>
