agregar link en iconos

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Presentación</h3>
 
             <div class="resume-item pb-0">
               <h4>Edgar Ruiz</h4>
@@ -369,7 +369,7 @@
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-telephone flex-shrink-0"></i>
+              <a href="tel: +51993093989"><i class="bi bi-telephone flex-shrink-0"></i></a>
               <div>
                 <h3>Teléfono</h3>
                 <p><a href="tel: +51993093989">+51 993093989</a></p>
@@ -377,7 +377,7 @@
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-envelope flex-shrink-0"></i>
+              <a href="mailto:eruizmundaca@gmail.com"><i class="bi bi-envelope flex-shrink-0"></i></a>
               <div>
                 <h3>Email</h3>
                 <p><a href="mailto:eruizmundaca@gmail.com">eruizmundaca@gmail.com</a></p>
