Coreccion de palabra mecatronico

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Ingeniero Mecatónico</h4>
+              <h4>Ingeniero Mecatrónico</h4>
               <h5>2016 - 2021</h5>
               <p><em>Universidad Peruana de Ciencias Aplicadas | Lima, Perú </em></p>
               <p>Bachiller en Ingeniería Mecatrónica, con formación sólida en sistemas automatizados y experiencia en el área de mantenimiento .</p>
